--- a/stable/postgresql/values.yaml
+++ b/stable/postgresql/values.yaml
@@ -285,10 +285,10 @@ persistence:
   ##
   subPath: ""
 
-  # storageClass: "-"
+  storageClass: "multik8s-nfs-storage"
   accessModes:
     - ReadWriteOnce
-  size: 8Gi
+  size: 20Gi
   annotations: {}
 
 ## updateStrategy for PostgreSQL StatefulSet and its slaves StatefulSets
@@ -357,7 +357,7 @@ slave:
 ##
 resources:
   requests:
-    memory: 256Mi
+    memory: 4Gi
     cpu: 250m
 
 networkPolicy:
