Adding configuration to create databases when Posgres is deployed

--- a/stable/postgresql/values.yaml
+++ b/stable/postgresql/values.yaml
@@ -482,3 +482,10 @@ metrics:
     timeoutSeconds: 5
     failureThreshold: 6
     successThreshold: 1
+
+## Configurarion of the databases to be created
+databases:
+  webhookSvc:
+    name: webhook
+  securitySvc:
+    name: security_service_db
